<resources>
    <string name="app_name">Pocket</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Me</string>
    <string name="title_more">Settings</string>

    <string name="title_activity_request">RequestActivity</string>
    <string name="tab_text_1">via Phone No.</string>
    <string name="tab_text_2">Bills</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!--Home-->
    <string name="balance">-</string>
    <string name="last_updated">-</string>

    <!--Profile-->
    <string name="profile_name">Profile Name</string>

    <!--Me-->
    <string name="phoneNumber">Phone Number</string>

    <!--TransactionResultActivity-->
    <string name="result">-</string>
    <string name="amountText">Amount: </string>
    <string name="amount">$ -</string>
    <string name="from_to">From: </string>
    <string name="name_involved">-</string>
    <string name="trans_id">Transaction ID: </string>
    <string name="transaction_id">-</string>

    <!--ScanQR Confirmation-->
    <string name="phoneNo_involved">5432 3456</string>

    <!--Password Changed Confirmation-->
    <string name="passwordChanged">Password changed successfully!</string>

    <!--Contract receive thingy-->
    <string name="frequency">Monthly</string>
    <string name="feePerFreq">$500</string>
    <string name="startDate">10-06-2019</string>
    <string name="endDate">10-06-2020</string>
    <string name="penaltyAmount">$300</string>

    <!--Strings for Frequency dropdown-->
    <string-array name="frequencies">
        <item>Day(s)</item>
        <item>Week(s)</item>
        <item>Month(s)</item>
        <item>Year(s)</item>
    </string-array>

    <!--Strings for Card Type dropdown-->
    <string-array name="cardTypes">
        <item>Visa</item>
        <item>MasterCard</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_top_up">Top Up</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="action_search">Search</string>
    <string name="search_hint">Type..</string>
    <string name="title_activity_transfer2">TransferActivity2</string>
    <string name="tab_text_3">Tab 3</string>


    <string name="password_description">Enter your store password to continue</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="sign_in">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>

    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>



</resources>
