<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/result"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/resultImage"
        app:layout_constraintStart_toStartOf="@+id/resultImage"
        app:layout_constraintTop_toBottomOf="@+id/resultImage" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_layout"
        android:text="RETURN"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/amountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/amountText"
        app:layout_constraintStart_toStartOf="@+id/fromTo"
        app:layout_constraintTop_toBottomOf="@+id/fromTo" />

    <TextView
        android:id="@+id/amountInvolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textColor="#5e76fa"
        app:layout_constraintEnd_toEndOf="@+id/result"
        app:layout_constraintTop_toTopOf="@+id/amountTitle" />

    <TextView
        android:id="@+id/transIdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/trans_id"
        app:layout_constraintStart_toStartOf="@+id/amountTitle"
        app:layout_constraintTop_toBottomOf="@+id/amountTitle" />

    <TextView
        android:id="@+id/fromTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/from_to"
        app:layout_constraintStart_toStartOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/nameInvolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_involved"
        android:textColor="#5e76fa"
        app:layout_constraintEnd_toEndOf="@+id/result"
        app:layout_constraintTop_toTopOf="@+id/fromTo" />

    <TextView
        android:id="@+id/transID"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/transaction_id"
        android:textColor="#5e76fa"
        app:layout_constraintEnd_toEndOf="@+id/result"
        app:layout_constraintTop_toTopOf="@+id/transIdTitle" />

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/img_transfer"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>