<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContractActivity_Details">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle"
        android:elevation="16dp"
        android:padding="16dp"
        android:src="@drawable/ic_round_home_24px"
        app:layout_constraintStart_toStartOf="@+id/cardView7"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/circleImageView">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="48dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="112dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:autoSizeTextType="uniform"
                android:text="Contract Description"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="Name:"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline10" />

            <TextView
                android:id="@+id/nameInvolved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/name_involved"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/nameText"
                app:layout_constraintTop_toTopOf="@+id/guideline10" />

            <TextView
                android:id="@+id/feeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="30dp"
                android:text="Phone No:"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/nameText"
                app:layout_constraintTop_toBottomOf="@+id/nameText" />

            <TextView
                android:id="@+id/phoneInvolved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:text="@string/phoneNo_involved"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/feeText"
                app:layout_constraintTop_toBottomOf="@+id/nameText" />

            <TextView
                android:id="@+id/feePerFreq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:text="@string/feePerFreq"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/colonText"
                app:layout_constraintTop_toBottomOf="@+id/feeText" />

            <TextView
                android:id="@+id/penaltyAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:text="@string/penaltyAmount"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/penaltyFeeText"
                app:layout_constraintTop_toBottomOf="@+id/feePerText" />

            <TextView
                android:id="@+id/feePerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="30dp"
                android:text="Fee per"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/feeText"
                app:layout_constraintTop_toBottomOf="@+id/feeText" />

            <TextView
                android:id="@+id/frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:text="Month"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/feePerText"
                app:layout_constraintTop_toBottomOf="@+id/feeText" />

            <TextView
                android:id="@+id/colonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="30dp"
                android:text=":"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/frequency"
                app:layout_constraintTop_toBottomOf="@+id/feeText" />

            <TextView
                android:id="@+id/penaltyFeeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="30dp"
                android:text="Penalty Fee:"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/feePerText"
                app:layout_constraintTop_toBottomOf="@+id/feePerText" />

            <TextView
                android:id="@+id/startDate"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:text="10 June 2018"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/dashText"
                app:layout_constraintTop_toBottomOf="@+id/penaltyFeeText" />

            <TextView
                android:id="@+id/dashText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="-"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="293dp" />

            <TextView
                android:id="@+id/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:text="@string/endDate"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/dashText"
                app:layout_constraintTop_toBottomOf="@+id/penaltyFeeText" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="241dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>